k8s/monitoring/cadvisor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: monitoring
spec:
  selector:
    app: cadvisor
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
